--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in human-computer interaction, human-robot interaction, mixed reality, and artificial intelligence.
+                  I'm interested in human-computer interaction, human-robot interaction, and mixed-reality.
                 </p>
               </td>
             </tr>
@@ -4309,7 +4309,7 @@ Under an Unknown Illumination</span>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  Template adopted from <a href="https://jonbarron.info/">Jon Barron</a>.
                 </p>
               </td>
             </tr>
