--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:16px;width:100%;vertical-align:middle">
-                <h2>Research</h2>
+                <h2>Projects</h2>
                 <p>
                   I'm interested in human-computer interaction, human-robot interaction, and mixed-reality.
                 </p>
@@ -75,14 +75,9 @@
         <a href="https://szymanowiczs.github.io/bolt3d">
           <span class="papertitle">Bolt3D: Generating 3D Scenes in Seconds</span>
         </a>
+
         <br>
-        <a href="https://szymanowiczs.github.io/">Stanislaw Szymanowicz</a>,
-        <a href="https://jasonyzhang.com">Jason Y. Zhang</a>,
-        <a href="https://pratulsrinivasan.github.io">Pratul Srinivasan</a>,
-        <a href="https://ruiqigao.github.io">Ruiqi Gao</a>,
-        <a href="https://github.com/ArthurBrussee">Arthur Brussee</a>,
-        <a href="https://holynski.org">Aleksander Holynski</a>,
-        <a href="https://ricardomartinbrualla.com">Ricardo Martin-Brualla</a>,
+        <a href="https://szymanowiczs.github.io/">Stanislaw Szymanowicz</a>
 		<strong>Jonathan T. Barron</strong>,
         <a href="https://henzler.github.io">Philipp Henzler</a>
         <br>
@@ -4299,7 +4294,7 @@ Under an Unknown Illumination</span>
                 <div class="colored-box" style="background-color: #edd892;"><h2>Teaching</h2></div>
               </td>
               <td style="padding:8px;width:80%;vertical-align:center">
-                <a href="https://s3-us-west-1.amazonaws.com/umsi-class/539.pdf">Teaching Assistant, SI539</a>
+                <a href="https://s3-us-west-1.amazonaws.com/umsi-class/539.pdf">Teaching Assistant, SI539 Fall 2022</a>
               </td>
             </tr>
             
@@ -4308,7 +4303,7 @@ Under an Unknown Illumination</span>
             <tr>
               <td style="padding:0px">
                 <br>
-                <p style="text-align:right;font-size:small;">
+                <p style="text-align:center;font-size:small;">
                   Template adopted from <a href="https://jonbarron.info/">Jon Barron</a>.
                 </p>
               </td>
