--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
 
       <td style="padding:8px;width:80%;vertical-align:middle">
         <a href="https://szymanowiczs.github.io/bolt3d">
-          <span class="papertitle">Bolt3D: Generating 3D Scenes in Seconds</span>
+          <span class="papertitle">MIT Reality Hack 2024</span>
         </a>
 
         <br>
-        <a href="https://szymanowiczs.github.io/">Stanislaw Szymanowicz</a>
-		<strong>Jonathan T. Barron</strong>,
-        <a href="https://henzler.github.io">Philipp Henzler</a>
+        <a href="https://szymanowiczs.github.io/">Jiawen Zhang</a>
+        <a href="https://henzler.github.io">Ivan Klus</a>
+        <a href="https://henzler.github.io">Maomao Ding</a>
+        <a href="https://henzler.github.io">Jake Ledner</a>
+        <a href="https://henzler.github.io">Sahana Vijaya</a>
+
         <br>
         <em>ICCV</em>, 2025
         <br>
