--- a/index.html
+++ b/index.html
@@ -72,27 +72,21 @@
       </td>
 
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://szymanowiczs.github.io/bolt3d">
+        <a href="https://www.realityhackatmit.com/">
           <span class="papertitle">MIT Reality Hack 2024</span>
         </a>
 
-        <br>
-        <a href="https://szymanowiczs.github.io/">Jiawen Zhang</a>
-        <a href="https://henzler.github.io">Ivan Klus</a>
-        <a href="https://henzler.github.io">Maomao Ding</a>
-        <a href="https://henzler.github.io">Jake Ledner</a>
-        <a href="https://henzler.github.io">Sahana Vijaya</a>
+        <br>Jiawen Zhang, Ivan Klus, Maomao Ding, Jake Ledner, Sahana Vijaya
+        <br><em>January 2024</em>
 
         <br>
-        <em>ICCV</em>, 2025
-        <br>
-        <a href="https://szymanowiczs.github.io/bolt3d">project page</a>
-        /
-        <a href="https://szymanowiczs.github.io/bolt3d">arXiv</a>
-        <p></p>
-        <p>
-		By training a latent diffusion model to directly output 3D Gaussians we enable fast (~6 seconds on a single GPU) feed-forward 3D scene generation.
-        </p>
+          <a href="https://drive.google.com/file/d/1kBJPzga4k6WI3BUuS9dUn0phyud5bQK_/view">Video Demo</a>
+          /
+          <a href="https://github.com/Robin-Hood-zjw/golf_swing">Code Demo</a>
+          <p>
+            By training a latent diffusion model to directly output 3D Gaussians we enable fast
+            (~6 secondson a single GPU) feed-forward 3D scene generation.
+          </p>
       </td>
     </tr>
 <!-- 
