--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
           <span class="papertitle">MIT Reality Hack 2024</span>
         </a>
 
-        <br>Jiawen Zhang, Ivan Klus, Maomao Ding, Jake Ledner, Sahana Vijaya
-        <br><em>January 2024</em>
+        <br>
+        <span>Jiawen Zhang, Ivan Klus, Maomao Ding, Jake Ledner, Sahana Vijaya</span>
+
+        <br>
+        <span>
+          <em>January 2024</em>
+        </span>
 
         <br>
           <a href="https://drive.google.com/file/d/1kBJPzga4k6WI3BUuS9dUn0phyud5bQK_/view">Video Demo</a>
