--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:jiawenz.robin@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Robin-Hood-zjw">Github</a>
                 </p>
               </td>
