--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:jiawenz.robin@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">resume</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Robin-Hood-zjw">Github</a>
                 </p>
               </td>
@@ -54,9 +54,8 @@
         <div class="one">
           <div class="two" id='bolt3d_image'>
             <video  width=100% height=100% muted autoplay loop>
-              <source src="images/bolt3d.mp4" type="video/mp4">
+              <source src="images/golfVR.mp4" type="video/mp4">
               Your browser does not support the video tag.
-
             </video>
           </div>
           <img src='images/bolt3d.jpg' width="160">
