--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                   Jiawen Zhang
                 </p>
                 <p>
-                  My name is Jiawen Zhang, a software engineer at Chuangjia International, Co. in Fremont, California.
-
+                  My name is Jiawen Zhang, a software engineer at Chuangjia International, Co. in Fremont, California. 
                   I earned my master's degree from the University of Michigan - Ann Arbor.
                 </p>
+                <p>I attended different activities in my exploration interests, which include hackathons, clubs, and research groups.</p>
                 <p style="text-align:center">
                   <a href="mailto:jiawenz.robin@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">resume</a> &nbsp;/&nbsp;
