--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Projects</h2>
                 <p>
-                  I'm interested in human-computer interaction, human-robot interaction, and mixed-reality.
+                  I'm interested in human-computer interaction, human-robot interaction, and mixed-reality. My preferred research direction is to design intuitive and anticipatory mixed-reality interfaces that catch the micro-motion of users.   
                 </p>
               </td>
             </tr>
