--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>I attended different activities in my exploration interests, which include hackathons, clubs, and research groups.</p>
                 <p style="text-align:center">
                   <a href="mailto:jiawenz.robin@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">resume</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1qwDWKoCYyeuvxEoMCwCvOa24NxQtgNEh/view?usp=sharing">Resume</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Robin-Hood-zjw">Github</a>
                 </p>
               </td>
