--- a/index.html
+++ b/index.html
@@ -75,14 +75,7 @@
           /
           <a href="https://github.com/Robin-Hood-zjw/golf_swing">Code Demo</a>
           <p>
-            The Swingcoach application helps golfers to visualize a proper swing plane and execute a golf swing with this swing plane guide in their field of view.
-            As a golfer, it is often quite difficult to self-diagnose issues and understand whether your technique is correct. The primary way golfers practice their 
-            swing is by going to the driving range and performing swing drills that help them understand the difference between "feel" and "real". Sometimes, it may 
-            feel like your swing is on plane from your point of view, but in reality a 3rd party observer could easily tell that it is not. This is 
-            one of the reasons it can be so useful to have a golf coach or to take videos of your swing. Each of these methods for training involves a few pain points. 
-            Videos are 2D in nature so multiple angles are required to understand how the swing looks an all axes. This can be quite cumbersome to setup or expensive to 
-            get equipment that makes it easy. Also, golf coaches can be quite expensive and only accessible for an hour or two at a time. Swingcoach allows golfers to 
-            easily view the "real" spatial data of how their swing was executed by showcasing a drawn line of their swing alongslide an ideal swing plane. Lastly, a score is calculated! This is score helps the golfer understand how close their swing was to the ideal swing plane. A higher score indicates a better swing, and a score of 100 indicates a near perfect swing!
+            The Swingcoach application helps golfers to visualize a proper swing plane and execute a golf swing with this swing plane guide in their field of view. As a golfer, it is often quite difficult to self-diagnose issues and understand whether your technique is correct. The primary way golfers practice their swing is by going to the driving range and performing swing drills that help them understand the difference between "feel" and "real". Sometimes, it may feel like your swing is on plane from your point of view, but in reality a 3rd party observer could easily tell that it is not. This is one of the reasons it can be so useful to have a golf coach or to take videos of your swing. Each of these methods for training involves a few pain points. Videos are 2D in nature so multiple angles are required to understand how the swing looks an all axes. This can be quite cumbersome to setup or expensive to get equipment that makes it easy. Also, golf coaches can be quite expensive and only accessible for an hour or two at a time. Swingcoach allows golfers to easily view the "real" spatial data of how their swing was executed by showcasing a drawn line of their swing alongslide an ideal swing plane. Lastly, a score is calculated! This is score helps the golfer understand how close their swing was to the ideal swing plane. A higher score indicates a better swing, and a score of 100 indicates a near perfect swing!
           </p>
       </td>
     </tr>
